2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed 'Bug 457237 - code completion doesn't
	show static methods when setting global variable'.

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed 'Bug 457003 - code completion shows
	variables out of scope'.

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Fixed unit test for bug 323283. 

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Fixed anonymous class unit test.

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 460234 - Invalid options
	shown when typing 'override'".

2008-12-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/NRefactoryParameterDataProvider.cs: Optimize
	GetParameterCompletionCommandOffset. It was a cause of important
	slowdowns in the editor when pressing return.

2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Optimized. Do nothing in
	HandleParameterCompletion unless the char is going to trigger a
	parameter completion.

	* md1format.xml: Added missing property.

	* CSharpBindingCompilerManager.cs: Improve error message when an
	assembly is not found.

	* gtk-gui/gui.stetic: Update.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.mdp:
	* Autotools/Autotools.mdp: All projects now require fx 3.5.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs:
	* Autotools/CSharpAutotoolsSetup.cs: Track API changes.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.mdp: Don't require a specific version of Mono.Addins.

2008-12-05  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/CSharpTextEditorIndentation.cs: Track api changes.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/MemberCompletionData.cs: Use full names in the description of the